<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorThemeDark"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <LinearLayout
        android:id="@+id/login_frame_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="350dp">
            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/quizzy_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/app_name"
                android:textColor="@color/colorThemeLight"
                android:textSize="45sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/quizzy_logo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/username"
                android:layout_below="@id/app_name"
                android:layout_centerInParent="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/quizzy_logo"
                android:src="@drawable/ic_logo_quizzy" />

            <EditText
                android:id="@+id/username"
                android:layout_width="@dimen/width_edit_text"
                android:layout_height="@dimen/height_edit_text"
                android:layout_centerInParent="true"
                android:autofillHints="@string/user_name"
                android:background="@drawable/edittext_background"
                android:hint="@string/edit_text_user_name"
                android:inputType="text"
                android:paddingLeft="15dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="@dimen/width_edit_text"
                android:layout_height="@dimen/height_edit_text"
                android:layout_below="@+id/username"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="15dp" />

            <Button
                android:id="@+id/buttonConnectLogin"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/mybtnselect"
                android:text="@string/login"
                android:textColor="#FFFFFF" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/sign_in_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        <EditText
            android:id="@+id/first_name_sign_in_text_view"
            android:layout_width="@dimen/width_edit_text"
            android:layout_height="@dimen/height_edit_text"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/edit_text_first_name"
            android:inputType="text"
            android:paddingLeft="18dp" />
        <EditText
            android:id="@+id/last_name_sign_in_text_view"
            android:layout_width="@dimen/width_edit_text"
            android:layout_height="@dimen/height_edit_text"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/edit_text_last_name"
            android:inputType="text"
            android:paddingLeft="18dp" />
        <EditText
            android:id="@+id/user_name_sign_in_text_view"
            android:layout_width="@dimen/width_edit_text"
            android:layout_height="@dimen/height_edit_text"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/edit_text_user_name"
            android:inputType="text"
            android:paddingLeft="18dp" />
        <EditText
            android:id="@+id/user_mail_sign_in_text_view"
            android:layout_width="@dimen/width_edit_text"
            android:layout_height="@dimen/height_edit_text"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/edit_text_user_mail"
            android:inputType="textEmailAddress"
            android:paddingLeft="18dp" />
        <EditText
            android:id="@+id/user_password_sign_in_text_view"
            android:layout_width="@dimen/width_edit_text"
            android:layout_height="@dimen/height_edit_text"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="18dp" />
        <EditText
            android:id="@+id/user_password_confirmed_sign_in_text_view"
            android:layout_width="@dimen/width_edit_text"
            android:layout_height="@dimen/height_edit_text"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/edit_text_confirm_password"
            android:inputType="textPassword"
            android:paddingLeft="18dp" />
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mybtnselect"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF" />
    </LinearLayout>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</LinearLayout>
